Extracting Day, Month and Year from Date Input

--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estimated Due Date Calculator</title>
+
     <link rel="stylesheet" href="./style.css">
+
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans&family=Roboto&display=swap" rel="stylesheet">
+
+    <link rel="shortcut icon" type="image/png" href="./assets/favicon.png">
     
 </head>
 <body>
@@ -20,6 +24,7 @@
     <div>
         <section class="calculation">
             <div class="sub-sec-title">Last Menstrual Period</div>
+            <input type="date" class="date">
 
             <div class="sub-sec-title">Gestational Age</div>
 
