Making CSS look better overall

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <header>
         <div class="pageTitle">
-            Calculate the Estimated Due Date from the Last Menstrual Period
+            <p>Calculate the <strong>Estimated Due Date</strong> from the <strong>Last Menstrual Period</strong></p>
         </div>
     </header>
 
