--- a/index.html
+++ b/index.html
@@ -17,85 +17,85 @@
 
     <header>
         <div class="pageTitle">
-            <p>Calculate the <strong>Estimated Due Date</strong> from the <strong>Last Menstrual Period</strong></p>
+            <p>Calculate the <strong>Estimated Due Date</strong> </br>from the <strong>Last Menstrual Period</strong></p>
         </div>
     </header>
 
-    <div>
-        <section class="calculation">
-            <div class="sub-sec-title">Last Menstrual Period</div>
+    <section class="calculation">
+        <div class="sub-sec-title">Last Menstrual Period</div>
 
-            <section class="dateConstructor">
-                <select class="dayClass">
-                    <option value="0" selected='selected'>Day</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                    <option value="6">6</option>
-                    <option value="7">7</option>
-                    <option value="8">8</option>
-                    <option value="9">9</option>
-                    <option value="10">10</option>
-                    <option value="11">11</option>
-                    <option value="12">12</option>
-                    <option value="13">13</option>
-                    <option value="14">14</option>
-                    <option value="15">15</option>
-                    <option value="16">16</option>
-                    <option value="17">17</option>
-                    <option value="18">18</option>
-                    <option value="19">19</option>
-                    <option value="20">20</option>
-                    <option value="21">21</option>
-                    <option value="22">22</option>
-                    <option value="23">23</option>
-                    <option value="24">24</option>
-                    <option value="25">25</option>
-                    <option value="26">26</option>
-                    <option value="27">27</option>
-                    <option value="28">28</option>
-                    <option value="29">29</option>
-                    <option value="30">30</option>
-                    <option value="31">31</option>
-                </select>
-                <select class="monthClass">
-                    <option value="0" selected='selected'>Month</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                    <option value="6">6</option>
-                    <option value="7">7</option>
-                    <option value="8">8</option>
-                    <option value="9">9</option>
-                    <option value="10">10</option>
-                    <option value="11">11</option>
-                    <option value="12">12</option>
-                </select>
-                <select class="yearClass">
-                    <option value="0" selected='selected'>Year</option>
-                    <option value="2021">2021</option>
-                    <option value="2022">2022</option>
-                </select>
-            </section>
-
-
-            <div class="sub-sec-title">Gestational Age</div>
-
-            <div class="sub-sec-title">Estimated Due Date</div>
-
-
-            <button class="btn-calc" type="submit">Calculate</button>
+        <section class="dateConstructor">
+            <select class="dayClass">
+                <option value="0" selected='selected'>Day</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+                <option value="11">11</option>
+                <option value="12">12</option>
+                <option value="13">13</option>
+                <option value="14">14</option>
+                <option value="15">15</option>
+                <option value="16">16</option>
+                <option value="17">17</option>
+                <option value="18">18</option>
+                <option value="19">19</option>
+                <option value="20">20</option>
+                <option value="21">21</option>
+                <option value="22">22</option>
+                <option value="23">23</option>
+                <option value="24">24</option>
+                <option value="25">25</option>
+                <option value="26">26</option>
+                <option value="27">27</option>
+                <option value="28">28</option>
+                <option value="29">29</option>
+                <option value="30">30</option>
+                <option value="31">31</option>
+            </select>
+            <select class="monthClass">
+                <option value="0" selected='selected'>Month</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+                <option value="11">11</option>
+                <option value="12">12</option>
+            </select>
+            <select class="yearClass">
+                <option value="0" selected='selected'>Year</option>
+                <option value="2021">2021</option>
+                <option value="2022">2022</option>
+            </select>
         </section>
 
 
-        <section class="explanation">
-            <div class="exp-text">Here i'm gonna do explain how it works</div>
-        </section>
-    </div>
+        <div class="sub-sec-title">Gestational Age</div>
+
+        <div class="sub-sec-title">Estimated Due Date</div>
+
+
+        <button class="btn-calc" type="submit">Calculate</button>
+    </section>
+
+
+    <section>
+        <div class="explanation">
+            <p>Here i'm gonna do explain how it works</p>
+        </div>
+    </section>
 
     <footer>
         <div class="credits">
