Minor fixes to CSS

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
 
     <section class="calculation">
-        <div class="sub-sec-title">Last Menstrual Period</div>
+        <div class="sub-sec-title">Last Menstrual Period (<strong>LMP</strong>)</div>
 
         <section class="dateConstructor">
             <select class="dayClass">
@@ -82,9 +82,9 @@
         </section>
 
 
-        <div class="sub-sec-title">Gestational Age</div>
+        <div class="sub-sec-title">Gestational Age (<strong>GA</strong>)</div>
 
-        <div class="sub-sec-title">Estimated Due Date</div>
+        <div class="sub-sec-title">Estimated Due Date (<strong>EDD</strong>)</div>
 
 
         <button class="btn-calc" type="submit">Calculate</button>
