Minor fixes to HTML and CSS

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <header>
         <div class="pageTitle">
-            <p>Calculate the <strong>Estimated Due Date</strong> </br>from the <strong>Last Menstrual Period</strong></p>
+            <p>Calculate the <strong>Estimated Due Date</strong> </br>based on the <strong>Last Menstrual Period</strong></p>
         </div>
     </header>
 
