Small changes to HTML

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans&family=Roboto&display=swap" rel="stylesheet">
 
     <link rel="shortcut icon" type="image/png" href="./assets/favicon.png">
-    
 </head>
 <body>
 
@@ -81,13 +80,14 @@
             </select>
         </section>
 
+        <button class="btn-calc" type="submit"><strong>Calculate</strong></button>
 
         <div class="sub-sec-title">Gestational Age (<strong>GA</strong>)</div>
+        <div class="gaResClass">Waiting for the Last Menstrual Period date...</div>
 
         <div class="sub-sec-title">Estimated Due Date (<strong>EDD</strong>)</div>
-
-
-        <button class="btn-calc" type="submit">Calculate</button>
+        <div class="eddResClass">Waiting for the Last Menstrual Period date...</div>
+        
     </section>
 
 
