--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
     </header>
 
-    <div class="calculation">
+    <div class="main">
         <div class="item-section">Last Menstrual Period (<strong>LMP</strong>)</div>
 
         <section class="dateConstructor">
