Adding the name of the months

--- a/index.html
+++ b/index.html
@@ -24,6 +24,22 @@
         <div class="item-section">Last Menstrual Period (<strong>LMP</strong>)</div>
 
         <section class="dateConstructor">
+            <select class="monthClass">
+                <option value="0" selected='selected'>Month</option>
+                <option value="1">January</option>
+                <option value="2">February</option>
+                <option value="3">March</option>
+                <option value="4">April</option>
+                <option value="5">May</option>
+                <option value="6">June</option>
+                <option value="7">July</option>
+                <option value="8">August</option>
+                <option value="9">September</option>
+                <option value="10">October</option>
+                <option value="11">November</option>
+                <option value="12">December</option>
+            </select>
+
             <select class="dayClass">
                 <option value="0" selected='selected'>Day</option>
                 <option value="1">1</option>
@@ -59,26 +75,10 @@
                 <option value="31">31</option>
             </select>
 
-            <select class="monthClass">
-                <option value="0" selected='selected'>Month</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-                <option value="8">8</option>
-                <option value="9">9</option>
-                <option value="10">10</option>
-                <option value="11">11</option>
-                <option value="12">12</option>
-            </select>
-
             <select class="yearClass">
                 <option value="0" selected='selected'>Year</option>
-                <option value="2021">2021</option>
-                <option value="2022">2022</option>
+                <option class="lastYear" value=""></option>
+                <option class="currentYear" value=""></option>
             </select>
         </section>
 
