--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
         <button class="btnCalc" type="submit">Calculate</button>
 
         <div class="item-section">Gestational Age (<strong>GA</strong>)</div>
-        <div class="gaResClass">Select a Date and click Calculate!</div>
+        <div class="gaResClass">Select a Date and click Calculate</div>
 
         <div class="item-section">Estimated Due Date (<strong>EDD</strong>)</div>
-        <div class="eddResClass">Select a Date and click Calculate!</div>
+        <div class="eddResClass">Select a Date and click Calculate</div>
     </div>
 
     <footer>
